# pyresparser

./: pyproject.toml  test_parser.py
pyresparser/: constants.py  requirements.txt  utils.py
pyresparser/data/: dev.spacy
