[tool.poetry]
name = "pyresparser"
version = "2.0.0"
description = ""
authors = ["Sayeed Anjum <sayeed@greytip.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
spacy = "^3.7.4"
pdfminer = "^20191125"
docx2txt = "^0.8"
python-dateutil = "^2.9.0.post0"
pandas = "^2.2.2"
textract = "^1.6.5"
scikit-learn = "^1.5.0"
nltk = "^3.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
